Add reports for problems 2,3,4

--- a/assignments/01/P2/main.tex
+++ b/assignments/01/P2/main.tex
@@ -110,7 +110,7 @@ literate=
 
 \vspace{3cm}
 \title{CS3390 Assignment 1\\Problem 2}
-\author{Gautam Singh\\CS21BTECH11018}
+\author{Gautam Singh (CS21BTECH11018)\\Jaswanth Beere (BM21BTECH11007)}
 \maketitle
 \tableofcontents
 \bigskip
