--- a/assignments/01/P2/codes/winequality.ipynb
+++ b/assignments/01/P2/codes/winequality.ipynb
@@ -31,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from statsmodels.miscmodels.ordinal_model import OrderedModel"
@@ -567,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,8 @@
      "output_type": "stream",
      "text": [
       "RMSE for red wine: 0.6730945439280761\n",
-      "RMSE for white wine: 0.7493466349620683\n"
+      "RMSE for white wine: 0.7493466349620683\n",
+      "383.0329638305798\n"
      ]
     }
    ],
