--- a/assignments/02/P1/codes/PCA_SVHN_PoV_Analysis.ipynb
+++ b/assignments/02/P1/codes/PCA_SVHN_PoV_Analysis.ipynb
@@ -184,7 +184,10 @@
    "source": [
     "# Perform PCA of the generated training set using only the top 10 eigenvectors\n",
     "pca = PCA(n_components=10)\n",
-    "train_X_pca = pca.fit_transform(train_X_gen)"
+    "train_X_pca = pca.fit_transform(train_X_gen)\n",
+    "\n",
+    "# Perform PCA transform of the test data\n",
+    "test_X_pca = pca.transform(test_X)"
    ]
   },
   {
@@ -373,7 +376,7 @@
     "Now, we perform the k-nearest neighbours classification algorithm on the\n",
     "training dataset, with and without PCA. We also demonstrate the difference in\n",
     "test accuracy on using different number of eigenvectors for the PCA as found in\n",
-    "the previous sections."
+    "the previous sections. Here, we consider `k = 5, 7`."
    ]
   },
   {
@@ -391,14 +394,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### k-NN on Raw Data"
+    "### k-NN on Raw Data\n",
+    "\n",
+    "The raw data obtained is directly run with kNN, and the accuracies are reported\n",
+    "below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for raw data using k = 5:  0.40788260602335585\n",
+      "Accuracy for raw data using k = 7:  0.41863859864781805\n"
+     ]
+    }
+   ],
    "source": [
     "# Run kNN with k=5 and k=7. This might take a while.\n",
     "\n",
@@ -409,15 +424,18 @@
     "neigh_seven = neigh_seven.fit(train_X_gen, train_Y_gen.ravel())\n",
     "neigh_seven_score_raw = neigh_seven.score(test_X_reshaped, test_Y_reshaped)\n",
     "# Report accuracy\n",
-    "print('Accuracy for raw data using k = 5: ', neigh_five_score_raw)\n",
-    "print('Accuracy for raw data using k = 7: ', neigh_seven_score_raw)"
+    "print('Accuracy for raw data using k = 5:', neigh_five_score_raw)\n",
+    "print('Accuracy for raw data using k = 7:', neigh_seven_score_raw)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### k-NN on Preprocessed Data"
+    "### k-NN on PCA Preprocessed Data\n",
+    "\n",
+    "To improve the accuracy (which is about 41.86%) of kNN, we perform it on the\n",
+    "preprocessed data."
    ]
   },
   {
@@ -425,6 +443,25 @@
    "metadata": {},
    "source": [
     "#### Using 10 Eigenvectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run kNN with k=5 and k=7. This might take a while.\n",
+    "\n",
+    "# Using k=5\n",
+    "neigh_five = neigh_five.fit(train_X_pca, train_Y_gen.ravel())\n",
+    "neigh_five_score_raw = neigh_five.score(test_X_pca, test_Y_reshaped)\n",
+    "# Using k=7\n",
+    "neigh_seven = neigh_seven.fit(train_X_pca, train_Y_gen.ravel())\n",
+    "neigh_seven_score_raw = neigh_seven.score(test_X_pca, test_Y_reshaped)\n",
+    "# Report accuracy\n",
+    "print('Accuracy for raw data using k = 5:', neigh_five_score_raw)\n",
+    "print('Accuracy for raw data using k = 7:', neigh_seven_score_raw)"
    ]
   },
   {
