--- a/assignments/02/P1/codes/PCA_SVHN_PoV_Analysis.ipynb
+++ b/assignments/02/P1/codes/PCA_SVHN_PoV_Analysis.ipynb
@@ -187,7 +187,7 @@
     "train_X_pca = pca.fit_transform(train_X_gen)\n",
     "\n",
     "# Perform PCA transform of the test data\n",
-    "test_X_pca = pca.transform(test_X)"
+    "test_X_pca = pca.transform(test_X_reshaped)"
    ]
   },
   {
