--- a/assignments/02/P1/P1.ipynb
+++ b/assignments/02/P1/P1.ipynb
@@ -485,8 +485,8 @@
    "source": [
     "### k-NN on PCA Preprocessed Data\n",
     "\n",
-    "To improve the accuracy (which is about 41.86%) of kNN, we perform it on the\n",
-    "preprocessed data."
+    "To achieve the same accuracy of kNN on raw data, we perform it on the\n",
+    "preprocessed data with different dimensions."
    ]
   },
   {
@@ -599,7 +599,7 @@
     "   is quite negligible when compared to using only a few eigenvectors. \n",
     "5. The gain in runtime by using PCA (for both kNN and PCA algorithms) with the\n",
     "   appropriate PoV threshold is enough to offset the slight, almost negligible\n",
-    "   loss in accuracy (6.3s compared to 4m 19.7s)."
+    "   loss in accuracy."
    ]
   }
  ],
