Add xgboost and mlp models

--- a/assignments/03/test.ipynb
+++ b/assignments/03/test.ipynb
@@ -11,11 +11,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.experimental import enable_iterative_imputer\n",
-        "from sklearn.impute import IterativeImputer\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from xgboost import XGBClassifier"
+        "from sklearn.impute import IterativeImputer"
       ]
     },
     {
@@ -52,53 +49,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        },
-        "id": "G0yQh6pPAMKB",
-        "outputId": "3d7c2cb2-fa37-4085-aec0-a3d59ecb7f46"
-      },
-      "outputs": [],
-      "source": [
-        "# # Initialize XGBoost model\n",
-        "# xgb_model = XGBClassifier()\n",
-        "\n",
-        "# le = LabelEncoder()\n",
-        "# train_y = le.fit_transform(y_train)\n",
-        "\n",
-        "# # Train the model on the training data\n",
-        "# xgb_model.fit(X_train, np.asarray(train_y, dtype=int))\n",
-        "\n",
-        "# # Make predictions on the validation data\n",
-        "# xgb_predictions = xgb_model.predict(X_test)\n",
-        "# xgb_predictions_actual = le.inverse_transform(xgb_predictions)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 44,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# pred_df = pd.DataFrame()\n",
-        "# pred_df['Category'] = xgb_predictions_actual\n",
-        "# pred_df['id'] = pred_df.index + 1\n",
-        "# pred_df = pred_df[['id', 'Category']]\n",
-        "# pred_df.to_csv('output/xgb.csv', index=False)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
-        "model = RandomForestClassifier()  \n",
-        "model.fit(X_train_imputed, y_train)\n",
-        "rfc_val_pred = model.predict(X_test)"
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "# Initialize mlpoost model\n",
+        "mlp_model = MLPClassifier(hidden_layer_sizes=[16, 16], max_iter=5000, activation='logistic')\n",
+        "\n",
+        "# Train the model on the training data\n",
+        "mlp_model.fit(X_train_imputed, y_train)\n",
+        "\n",
+        "# Make predictions on the validation data\n",
+        "mlp_predictions = mlp_model.predict(X_test)"
       ]
     },
     {
@@ -108,10 +72,10 @@
       "outputs": [],
       "source": [
         "pred_df = pd.DataFrame()\n",
-        "pred_df['Category'] = rfc_val_pred\n",
+        "pred_df['Category'] = mlp_predictions\n",
         "pred_df['id'] = pred_df.index + 1\n",
         "pred_df = pred_df[['id', 'Category']]\n",
-        "pred_df.to_csv('output/rfc.csv', index=False)"
+        "pred_df.to_csv('output/mlp.csv', index=False)"
       ]
     }
   ],
