--- a/assignments/03/codes/sklearn_nn_model.ipynb
+++ b/assignments/03/codes/sklearn_nn_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 86,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -11,13 +11,12 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-        "import xgboost"
+        "from sklearn.preprocessing import StandardScaler"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -27,7 +26,7 @@
         "# Assuming df is your DataFrame and 'Feature17' has missing values\n",
         "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
         "\n",
-        "df_train = pd.read_csv('data/iith_foml_2023_train.csv')\n",
+        "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
         "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
         "imputer.fit(df_train)\n",
@@ -41,17 +40,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [],
       "source": [
         "X_train = df_imputed.iloc[:, :-1]\n",
-        "y_train = df_imputed.iloc[:, -1]"
+        "y_train = df_imputed.iloc[:, -1]\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 89,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +75,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2, random_state=1337)\n",
+        "train_x, val_x, train_y, val_y = train_test_split(X_train_scaled, y_train, test_size=0.2, random_state=1337)\n",
         "\n",
         "print(\"Shape of train_x:\", train_x.shape)\n",
         "print(\"Shape of val_x:\", val_x.shape)\n",
@@ -84,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 90,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -98,93 +99,55 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "XGBoost Accuracy: 0.914572864321608\n",
-            "XGBoost Macro F1 Score: 0.38958985585064637\n",
+            "MLP Accuracy: 0.8793969849246231\n",
+            "MLP Macro F1 Score: 0.36083852839303876\n",
             "\n",
-            "XGBoost Classification Report:\n",
+            "MLP Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.94      0.98      0.96        49\n",
-            "         1.0       0.94      0.98      0.96       104\n",
-            "         2.0       0.69      0.79      0.73        14\n",
+            "         0.0       0.96      0.90      0.93        49\n",
+            "         1.0       0.92      0.96      0.94       104\n",
+            "         2.0       0.67      0.71      0.69        14\n",
             "         3.0       0.00      0.00      0.00         1\n",
-            "         5.0       0.86      0.55      0.67        11\n",
-            "         6.0       1.00      0.94      0.97        16\n",
+            "         5.0       0.56      0.45      0.50        11\n",
+            "         6.0       0.84      1.00      0.91        16\n",
             "         8.0       0.00      0.00      0.00         1\n",
             "        12.0       0.00      0.00      0.00         1\n",
             "        13.0       0.00      0.00      0.00         1\n",
             "        15.0       0.00      0.00      0.00         0\n",
             "        16.0       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.91       199\n",
-            "   macro avg       0.40      0.38      0.39       199\n",
-            "weighted avg       0.90      0.91      0.90       199\n",
+            "    accuracy                           0.88       199\n",
+            "   macro avg       0.36      0.37      0.36       199\n",
+            "weighted avg       0.86      0.88      0.87       199\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "from xgboost import XGBClassifier\n",
+        "from sklearn.neural_network import MLPClassifier\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
-        "# Initialize XGBoost model\n",
-        "xgb_model = XGBClassifier()\n",
-        "\n",
-        "le = LabelEncoder()\n",
-        "train_y = le.fit_transform(train_y)\n",
+        "# Initialize mlpoost model\n",
+        "mlp_model = MLPClassifier(hidden_layer_sizes=[16, 16], max_iter=5000, activation='logistic')\n",
         "\n",
         "# Train the model on the training data\n",
-        "xgb_model.fit(train_x, np.asarray(train_y, dtype=int))\n",
+        "mlp_model.fit(train_x, train_y)\n",
         "\n",
         "# Make predictions on the validation data\n",
-        "xgb_predictions = xgb_model.predict(val_x)\n",
+        "mlp_predictions = mlp_model.predict(val_x)\n",
         "\n",
         "# Calculate accuracy and macro F1 score\n",
-        "xgb_accuracy = accuracy_score(val_y, xgb_predictions)\n",
-        "xgb_macro_f1 = f1_score(val_y, xgb_predictions, average='macro', zero_division=0.0)\n",
+        "mlp_accuracy = accuracy_score(val_y, mlp_predictions)\n",
+        "mlp_macro_f1 = f1_score(val_y, mlp_predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"XGBoost Accuracy:\", xgb_accuracy)\n",
-        "print(\"XGBoost Macro F1 Score:\", xgb_macro_f1)\n",
+        "print(\"MLP Accuracy:\", mlp_accuracy)\n",
+        "print(\"MLP Macro F1 Score:\", mlp_macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
-        "xgb_classification_rep = classification_report(val_y, xgb_predictions, zero_division=0.0)\n",
-        "print(\"\\nXGBoost Classification Report:\\n\", xgb_classification_rep)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Random Forest Classifier"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 57,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Macro F1 Score: 0.42232181629377885\n"
-          ]
-        }
-      ],
-      "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "\n",
-        "rf_scaler = StandardScaler()\n",
-        "X_scaled = rf_scaler.fit_transform(X_train)\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_scaled, y_train, test_size=0.2, random_state=1337)\n",
-        "\n",
-        "model = RandomForestClassifier()\n",
-        "model.fit(train_x, train_y)\n",
-        "y_val_pred = model.predict(val_x)\n",
-        "macro_f1 = f1_score(val_y, y_val_pred, average='macro')\n",
-        "\n",
-        "print(f'Macro F1 Score: {macro_f1}')"
+        "mlp_classification_rep = classification_report(val_y, mlp_predictions, zero_division=0.0)\n",
+        "print(\"\\nMLP Classification Report:\\n\", mlp_classification_rep)"
       ]
     }
   ],
