Update mlp model

--- a/assignments/03/test.ipynb
+++ b/assignments/03/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 9,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
         "y_train = df.iloc[:, -1]\n",
         "X_train = df.iloc[:, :-1]\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
-        "# X_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
+        "X_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
         "imputer.fit(X_train)\n",
         "\n",
         "# Transform the dataset to replace missing values\n",
@@ -38,24 +38,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_test = pd.read_csv('data/iith_foml_2023_test.csv')\n",
-        "# df_test.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
+        "df_test.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
         "X_test = pd.DataFrame(imputer.transform(df_test), columns=df_test.columns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
         "from sklearn.neural_network import MLPClassifier\n",
         "\n",
-        "# Initialize mlpoost model\n",
+        "# Initialize mlp model\n",
         "mlp_model = MLPClassifier(hidden_layer_sizes=[16, 16], max_iter=5000, activation='logistic')\n",
         "\n",
         "# Train the model on the training data\n",
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
