--- a/assignments/03/codes/sklearn_nn_model.ipynb
+++ b/assignments/03/codes/sklearn_nn_model.ipynb
@@ -128,7 +128,7 @@
         "from sklearn.neural_network import MLPClassifier\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
-        "# Initialize mlpoost model\n",
+        "# Initialize mlp model\n",
         "mlp_model = MLPClassifier(hidden_layer_sizes=[16, 16], max_iter=5000, activation='logistic')\n",
         "\n",
         "# Train the model on the training data\n",
