Add adaboost model

--- a/assignments/03/codes/adaboost_model.ipynb
+++ b/assignments/03/codes/adaboost_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -10,12 +10,13 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from sklearn.preprocessing import StandardScaler"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.preprocessing import StandardScaler, LabelEncoder"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -26,7 +27,7 @@
         "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
         "\n",
         "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
-        "# # Fit the imputer model on the dataset to learn the data patterns\n",
+        "# Fit the imputer model on the dataset to learn the data patterns\n",
         "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
         "imputer.fit(df_train)\n",
         "\n",
@@ -39,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -51,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -95,70 +96,66 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/goatsadmin/.pyvenv/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:429: ConvergenceWarning: The optimal value found for dimension 0 of parameter k2__length_scale is close to the specified upper bound 100000.0. Increasing the bound and calling fit again may find a better value.\n",
-            "  warnings.warn(\n",
-            "/home/goatsadmin/.pyvenv/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:429: ConvergenceWarning: The optimal value found for dimension 0 of parameter k2__length_scale is close to the specified upper bound 100000.0. Increasing the bound and calling fit again may find a better value.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gaussian Process Classifier Accuracy: 0.8693467336683417\n",
-            "Gaussian Process Classifier Macro F1 Score: 0.2924767010527528\n",
+            "Adaboost Accuracy: 0.7135678391959799\n",
+            "Adaboost Macro F1 Score: 0.10629166666666667\n",
             "\n",
-            "Gaussian Process Classifier Classification Report:\n",
+            "Adaboost Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.87      1.00      0.93        48\n",
-            "         1.0       0.92      0.95      0.93        93\n",
-            "         2.0       0.76      0.76      0.76        33\n",
+            "         0.0       0.90      0.94      0.92        47\n",
+            "         1.0       0.65      0.98      0.78       100\n",
+            "         2.0       0.00      0.00      0.00        22\n",
+            "         3.0       0.00      0.00      0.00         2\n",
             "         4.0       0.00      0.00      0.00         1\n",
             "         5.0       0.00      0.00      0.00         5\n",
-            "         6.0       0.80      1.00      0.89        12\n",
+            "         6.0       0.00      0.00      0.00        10\n",
             "         8.0       0.00      0.00      0.00         2\n",
-            "         9.0       0.00      0.00      0.00         1\n",
             "        10.0       0.00      0.00      0.00         1\n",
             "        11.0       0.00      0.00      0.00         1\n",
+            "        12.0       0.00      0.00      0.00         1\n",
             "        13.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         1\n",
+            "        14.0       0.00      0.00      0.00         2\n",
+            "        15.0       0.00      0.00      0.00         2\n",
+            "        16.0       0.00      0.00      0.00         1\n",
+            "        17.0       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.87       199\n",
-            "   macro avg       0.28      0.31      0.29       199\n",
-            "weighted avg       0.81      0.87      0.84       199\n",
+            "    accuracy                           0.71       199\n",
+            "   macro avg       0.10      0.12      0.11       199\n",
+            "weighted avg       0.54      0.71      0.61       199\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.gaussian_process import GaussianProcessClassifier\n",
-        "from sklearn.gaussian_process.kernels import RBF\n",
+        "from sklearn.ensemble import AdaBoostClassifier\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
-        "# Initialize Gaussian Process Classifier model\n",
-        "rbf_model = GaussianProcessClassifier(1.0*RBF(1.0), random_state=42)\n",
+        "# Initialize Adaboost model\n",
+        "adaboost_model = AdaBoostClassifier()\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "train_y = le.fit_transform(train_y)\n",
         "\n",
         "# Train the model on the training data\n",
-        "rbf_model.fit(train_x, train_y)\n",
+        "adaboost_model.fit(train_x, train_y)\n",
         "\n",
         "# Make predictions on the validation data\n",
-        "rbf_predictions = rbf_model.predict(val_x)\n",
+        "adaboost_predictions = le.inverse_transform(adaboost_model.predict(val_x))\n",
         "\n",
         "# Calculate accuracy and macro F1 score\n",
-        "rbf_accuracy = accuracy_score(val_y, rbf_predictions)\n",
-        "rbf_macro_f1 = f1_score(val_y, rbf_predictions, average='macro', zero_division=0.0)\n",
+        "adaboost_accuracy = accuracy_score(val_y, adaboost_predictions)\n",
+        "adaboost_macro_f1 = f1_score(val_y, adaboost_predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"Gaussian Process Classifier Accuracy:\", rbf_accuracy)\n",
-        "print(\"Gaussian Process Classifier Macro F1 Score:\", rbf_macro_f1)\n",
+        "print(\"Adaboost Accuracy:\", adaboost_accuracy)\n",
+        "print(\"Adaboost Macro F1 Score:\", adaboost_macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
-        "rbf_classification_rep = classification_report(val_y, rbf_predictions, zero_division=0.0)\n",
-        "print(\"\\nGaussian Process Classifier Classification Report:\\n\", rbf_classification_rep)"
+        "adaboost_classification_rep = classification_report(val_y, adaboost_predictions, zero_division=0.0)\n",
+        "print(\"\\nAdaboost Classification Report:\\n\", adaboost_classification_rep)\n"
       ]
     }
   ],
