Add extratrees model

--- a/assignments/03/codes/extratrees_model.ipynb
+++ b/assignments/03/codes/extratrees_model.ipynb
@@ -46,8 +46,8 @@
       "source": [
         "X_train = df_imputed.iloc[:, :-1]\n",
         "y_train = df_imputed.iloc[:, -1]\n",
-        "scaler = StandardScaler()\n",
-        "X_train = scaler.fit_transform(X_train)"
+        "# scaler = StandardScaler()\n",
+        "# X_train = scaler.fit_transform(X_train)"
       ]
     },
     {
@@ -99,58 +99,59 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Adaboost Accuracy: 0.7537688442211056\n",
-            "Adaboost Macro F1 Score: 0.1577998069511671\n",
+            "Extra-Trees Accuracy: 0.9045226130653267\n",
+            "Extra-Trees Macro F1 Score: 0.4510921540381007\n",
             "\n",
-            "Adaboost Classification Report:\n",
+            "Extra-Trees Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.96      0.89      0.92        53\n",
-            "         1.0       0.69      1.00      0.81       103\n",
-            "         2.0       0.00      0.00      0.00        18\n",
-            "         4.0       0.00      0.00      0.00         1\n",
-            "         5.0       0.00      0.00      0.00         8\n",
-            "         6.0       0.00      0.00      0.00        10\n",
-            "         7.0       0.00      0.00      0.00         1\n",
+            "         0.0       0.87      0.98      0.92        53\n",
+            "         1.0       0.99      0.96      0.97        92\n",
+            "         2.0       0.79      0.79      0.79        29\n",
+            "         3.0       0.00      0.00      0.00         0\n",
+            "         5.0       0.80      0.67      0.73         6\n",
+            "         6.0       1.00      1.00      1.00        12\n",
+            "         7.0       0.00      0.00      0.00         2\n",
             "         8.0       0.00      0.00      0.00         2\n",
-            "        12.0       0.00      0.00      0.00         1\n",
-            "        13.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         1\n",
+            "         9.0       0.00      0.00      0.00         1\n",
+            "        10.0       0.00      0.00      0.00         1\n",
+            "        14.0       1.00      1.00      1.00         1\n",
+            "        15.0       0.00      0.00      0.00         0\n",
             "\n",
-            "    accuracy                           0.75       199\n",
-            "   macro avg       0.15      0.17      0.16       199\n",
-            "weighted avg       0.61      0.75      0.67       199\n",
+            "    accuracy                           0.90       199\n",
+            "   macro avg       0.45      0.45      0.45       199\n",
+            "weighted avg       0.89      0.90      0.90       199\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import AdaBoostClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
         "# Initialize Adaboost model\n",
-        "adaboost_model = AdaBoostClassifier()\n",
+        "model = ExtraTreesClassifier()\n",
         "\n",
         "le = LabelEncoder()\n",
         "train_y = le.fit_transform(train_y)\n",
         "\n",
         "# Train the model on the training data\n",
-        "adaboost_model.fit(train_x, train_y)\n",
+        "model.fit(train_x, train_y)\n",
         "\n",
         "# Make predictions on the validation data\n",
-        "adaboost_predictions = le.inverse_transform(adaboost_model.predict(val_x))\n",
+        "predictions = le.inverse_transform(model.predict(val_x))\n",
         "\n",
         "# Calculate accuracy and macro F1 score\n",
-        "adaboost_accuracy = accuracy_score(val_y, adaboost_predictions)\n",
-        "adaboost_macro_f1 = f1_score(val_y, adaboost_predictions, average='macro', zero_division=0.0)\n",
+        "accuracy = accuracy_score(val_y, predictions)\n",
+        "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"Adaboost Accuracy:\", adaboost_accuracy)\n",
-        "print(\"Adaboost Macro F1 Score:\", adaboost_macro_f1)\n",
+        "print(\"Extra-Trees Accuracy:\", accuracy)\n",
+        "print(\"Extra-Trees Macro F1 Score:\", macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
-        "adaboost_classification_rep = classification_report(val_y, adaboost_predictions, zero_division=0.0)\n",
-        "print(\"\\nAdaboost Classification Report:\\n\", adaboost_classification_rep)\n"
+        "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
+        "print(\"\\nExtra-Trees Classification Report:\\n\", classification_rep)\n"
       ]
     }
   ],
