--- a/assignments/03/test.ipynb
+++ b/assignments/03/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -12,12 +12,13 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.experimental import enable_iterative_imputer\n",
-        "from sklearn.impute import IterativeImputer"
+        "from sklearn.impute import IterativeImputer\n",
+        "from sklearn.preprocessing import StandardScaler, LabelEncoder"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -49,33 +50,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.neural_network import MLPClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
         "\n",
-        "# Initialize mlp model\n",
-        "mlp_model = MLPClassifier(hidden_layer_sizes=[16, 16], max_iter=5000, activation='logistic')\n",
+        "# Initialize Adaboost model\n",
+        "model = ExtraTreesClassifier()\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "train_y = le.fit_transform(y_train)\n",
         "\n",
         "# Train the model on the training data\n",
-        "mlp_model.fit(X_train_imputed, y_train)\n",
+        "model.fit(X_train_imputed, train_y)\n",
         "\n",
         "# Make predictions on the validation data\n",
-        "mlp_predictions = mlp_model.predict(X_test)"
+        "predictions = le.inverse_transform(model.predict(X_test))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
         "pred_df = pd.DataFrame()\n",
-        "pred_df['Category'] = mlp_predictions\n",
+        "pred_df['Category'] = predictions\n",
         "pred_df['id'] = pred_df.index + 1\n",
         "pred_df = pred_df[['id', 'Category']]\n",
-        "pred_df.to_csv('output/mlp.csv', index=False)"
+        "pred_df.to_csv('output/extratrees.csv', index=False)"
       ]
     }
   ],
