--- a/assignments/03/codes/bagging_model.ipynb
+++ b/assignments/03/codes/bagging_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -99,40 +99,36 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gradient Boosting Accuracy: 0.864321608040201\n",
-            "Gradient Boosting Macro F1 Score: 0.28350401468908587\n",
+            "Bagging Accuracy: 0.9296482412060302\n",
+            "Bagging Macro F1 Score: 0.5167690031920691\n",
             "\n",
-            "Gradient Boosting Classification Report:\n",
+            "Bagging Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       1.00      0.95      0.97        58\n",
-            "         1.0       0.87      0.96      0.91        93\n",
-            "         2.0       0.79      0.60      0.68        25\n",
+            "         0.0       0.98      1.00      0.99        56\n",
+            "         1.0       0.94      0.96      0.95        92\n",
+            "         2.0       0.82      0.85      0.84        27\n",
             "         3.0       0.00      0.00      0.00         1\n",
-            "         4.0       0.00      0.00      0.00         1\n",
-            "         5.0       0.67      0.33      0.44         6\n",
-            "         6.0       0.92      1.00      0.96        11\n",
-            "         8.0       0.00      0.00      0.00         2\n",
-            "         9.0       0.00      0.00      0.00         0\n",
-            "        10.0       0.00      0.00      0.00         0\n",
-            "        12.0       0.00      0.00      0.00         1\n",
-            "        13.0       0.00      0.00      0.00         0\n",
-            "        14.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         0\n",
+            "         5.0       0.80      0.67      0.73         6\n",
+            "         6.0       1.00      1.00      1.00        13\n",
+            "         8.0       0.00      0.00      0.00         1\n",
+            "         9.0       0.00      0.00      0.00         1\n",
+            "        12.0       0.00      0.00      0.00         0\n",
+            "        14.0       1.00      0.50      0.67         2\n",
             "\n",
-            "    accuracy                           0.86       199\n",
-            "   macro avg       0.30      0.27      0.28       199\n",
-            "weighted avg       0.87      0.86      0.86       199\n",
+            "    accuracy                           0.93       199\n",
+            "   macro avg       0.55      0.50      0.52       199\n",
+            "weighted avg       0.92      0.93      0.92       199\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import GradientBoostingClassifier\n",
+        "from sklearn.ensemble import BaggingClassifier\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
         "# Initialize Adaboost model\n",
-        "model = GradientBoostingClassifier()\n",
+        "model = BaggingClassifier()\n",
         "\n",
         "le = LabelEncoder()\n",
         "train_y = le.fit_transform(train_y)\n",
@@ -148,12 +144,12 @@
         "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"Gradient Boosting Accuracy:\", accuracy)\n",
-        "print(\"Gradient Boosting Macro F1 Score:\", macro_f1)\n",
+        "print(\"Bagging Accuracy:\", accuracy)\n",
+        "print(\"Bagging Macro F1 Score:\", macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
         "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
-        "print(\"\\nGradient Boosting Classification Report:\\n\", classification_rep)\n"
+        "print(\"\\nBagging Classification Report:\\n\", classification_rep)\n"
       ]
     }
   ],
