--- a/assignments/03/codes/randomforest_model.ipynb
+++ b/assignments/03/codes/randomforest_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "\n",
     "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
     "df = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
+    "df.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
     "\n",
     "imputer.fit(df)\n",
     "df_imputed = imputer.transform(df)\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,23 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_x, val_x, train_y, val_y = train_test_split(X_standardized, y, test_size=0.2, random_state=42)\n"
+    "train_x, val_x, train_y, val_y = train_test_split(X_standardized, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Macro F1 Score: 46.73%\n"
+      "Macro F1 Score: 0.4671006615620127\n"
      ]
     }
    ],
@@ -73,7 +74,7 @@
     "y_val_pred = model.predict(val_x)\n",
     "macro_f1 = f1_score(val_y, y_val_pred, average='macro')\n",
     "\n",
-    "print(f'Macro F1 Score: {macro_f1:.2%}')"
+    "print(f'Macro F1 Score: {macro_f1}')"
    ]
   }
  ],
@@ -93,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
