--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,21 +2,21 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "id": "ftGaqLZDbwIX"
-      },
+      "execution_count": 21,
+      "metadata": {},
       "outputs": [],
       "source": [
         "import pandas as pd\n",
+        "pd.options.display.max_rows = None\n",
+        "pd.options.display.max_columns = None\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder"
+        "from sklearn.preprocessing import StandardScaler"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -99,37 +99,47 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Extra-Trees Accuracy: 0.914572864321608\n",
-            "Extra-Trees Macro F1 Score: 0.5609804332058365\n",
+            "Bagging Accuracy: 0.914572864321608\n",
+            "Bagging Macro F1 Score: 0.4942547484413513\n",
             "\n",
-            "Extra-Trees Classification Report:\n",
+            "Bagging Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.92      0.98      0.95        50\n",
-            "         1.0       0.98      0.98      0.98       101\n",
-            "         2.0       0.71      0.77      0.74        22\n",
-            "         4.0       1.00      1.00      1.00         1\n",
-            "         5.0       0.60      0.43      0.50         7\n",
-            "         6.0       1.00      1.00      1.00        12\n",
+            "         0.0       0.86      1.00      0.92        37\n",
+            "         1.0       0.96      0.98      0.97        98\n",
+            "         2.0       0.77      0.92      0.84        26\n",
+            "         4.0       0.00      0.00      0.00         2\n",
+            "         5.0       1.00      0.54      0.70        13\n",
+            "         6.0       1.00      1.00      1.00        17\n",
             "         7.0       0.00      0.00      0.00         1\n",
-            "         8.0       0.00      0.00      0.00         1\n",
-            "         9.0       0.00      0.00      0.00         1\n",
+            "         8.0       0.00      0.00      0.00         2\n",
             "        14.0       1.00      1.00      1.00         1\n",
-            "        15.0       0.00      0.00      0.00         2\n",
+            "        15.0       0.00      0.00      0.00         1\n",
+            "        17.0       0.00      0.00      0.00         1\n",
             "\n",
             "    accuracy                           0.91       199\n",
-            "   macro avg       0.56      0.56      0.56       199\n",
-            "weighted avg       0.90      0.91      0.91       199\n",
+            "   macro avg       0.51      0.49      0.49       199\n",
+            "weighted avg       0.89      0.91      0.90       199\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier\n",
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
-        "# Initialize Adaboost model\n",
-        "model = ExtraTreesClassifier()\n",
+        "# Initialize models\n",
+        "bagging_model = BaggingClassifier(random_state=42)\n",
+        "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
+        "randomforest_model = RandomForestClassifier(random_state=42)\n",
+        "\n",
+        "model = VotingClassifier(\n",
+        "    estimators=[\n",
+        "        ('rf', randomforest_model),\n",
+        "        ('bg', bagging_model),\n",
+        "        ('et', extratrees_model)\n",
+        "    ], voting='hard'\n",
+        ")\n",
         "\n",
         "# Train the model on the training data\n",
         "model.fit(train_x, train_y)\n",
@@ -142,12 +152,12 @@
         "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
         "\n",
         "# Display results\n",
-        "print(\"Extra-Trees Accuracy:\", accuracy)\n",
-        "print(\"Extra-Trees Macro F1 Score:\", macro_f1)\n",
+        "print(\"Bagging Accuracy:\", accuracy)\n",
+        "print(\"Bagging Macro F1 Score:\", macro_f1)\n",
         "\n",
         "# Classification report for more details\n",
         "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
-        "print(\"\\nExtra-Trees Classification Report:\\n\", classification_rep)"
+        "print(\"\\nBagging Classification Report:\\n\", classification_rep)"
       ]
     }
   ],
